--- a/src/style.css
+++ b/src/style.css
@@ -24,10 +24,12 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  padding: 0;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  width: 100%; /* 뷰포트의 전체 너비를 차지 */
+  box-sizing: border-box; /* 패딩과 보더를 width 계산에 포함 */
 }
 
 h1 {
