--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,15 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+.container-lg {
+  padding: 0 !important;
+}
+
+.container-fluid {
+  padding: 0 !important;
+}
+
+.app-container {
   margin: 0;
   padding: 0;
   place-items: center;
@@ -61,7 +69,7 @@ button:focus-visible {
 }
 
 #app {
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
